# fargoats-nikhil

./: .gitignore  Cargo.toml  FoundersClub_.sol  README.md  chain-info.md  instructions.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vercel.json
DOCS/: DOCS.MAIN.rs.md  EDITS002.md  README.md  SCHEMA.sql  database_schema.md  file001.md  standard-package-json.txt
GO/: SETUP.md
GO/farGoat/: database.go  go.mod  go.sum  graphql_client.go  handlers.go  main.go  middleware.go  models.go  run.sh
RUST/: Cargo.toml  goat-doc.txt  main.rs.old  main.rs.older
RUST/farGoat/: Cargo.toml
RUST/farGoat/src/: main.rs
contract/: FoundersClub.sol  solid1.md  test.sol
goat-pts-webapp/: next.config.ts  package-lock.json  package.json
goat-pts-webapp/src/app/: layout.tsx  page.tsx
goat-pts-webapp/src/components/: app-sidebar.tsx
goat-pts-webapp/src/hooks/: use-toast.ts
src/app/: _app.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
src/components/: app-sidebar.tsx  login-form.tsx  nav-main.tsx  nav-projects.tsx  theme-provider.tsx
src/constants/: genesis.ts  quest.ts
src/hooks/: genesis-form-context.tsx  use-quest-form.tsx
src/lib/: validation.ts
src/services/: BASE.md  README.md  pubsub.service.ts  subservice.ts
src/synth/: FoundersClubABI.json  contract-data.json  create-quest.json  ecosystem-leaderboard-page.json  genisis.json  profile-data.json  quest-data.json
src/types/: analytics.ts  genesis.ts  quest.ts
testdata/: Cargo.toml
testdata/ROSE/: go.mod  main.go
testdata/src/: main.rs
(+49 files in other folders)
