[package]
name = "testdata"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-cors = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
rand = "0.8"
chrono = "0.4"
vercel_runtime = { version = "1" }
serde_json = { version = "1", features = ["raw_value"] }

[[bin]]
name = "handler"
path = "bin/handler.rs"

[[bin]]
name = "testdata"
path = "src/main.rs" 