 [package]
name = "farGoat"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13"
actix-web = "4.0"
actix-web-actors = "4.1.0"
tokio = { version = "1.0", features = ["full", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
web3 = "0.19.0"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }