[package]
name = "testdata"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9"
actix-cors = "0.6.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
rand = "0.8"
chrono = "0.4"
vercel_runtime = { version = "1" }
serde_json = "1.0"

[[bin]]
name = "main"
path = "src/main.rs"